# sdl2cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
docs/: CMakeLists.txt
